# OMTP_851

./: README.md  omtp_factory.xacro  omtp_factory_lec1.xacro  omtp_lec1.urdf
Exercise/: Jtrajectory.csv  README.md
Exercise/dmp/: dmp_joint.py  dmp_quaternion.py
Exercise/franka_emika_panda/: panda.xml  panda_nohand.xml  scene.xml
Exercise/util/: cusum.py  math_util.py  utility.py
Week_1/omtp_w1/: .gitignore
cam_lecture3/: .setup_assistant  CMakeLists.txt  package.xml
cam_lecture3/config/: fake_controllers.yaml  gazebo_omtp.urdf  omtp.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
cam_lecture3/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
cam_lecture5/: .setup_assistant  CMakeLists.txt  package.xml
cam_lecture5/config/: fake_controllers.yaml  gazebo_omtp.urdf  omtp.srdf  ros_controllers.yaml
cam_lecture5/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
lecture5_files/omtp_lecture5/: package.xml
lecture5_files/omtp_lecture5/models/banana/: model.sdf
lecture5_files/omtp_lecture5/rviz/: moveit.rviz
lecture5_files/omtp_lecture5/worlds/: yolo_world.world
lecture5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
lecture5_moveit_config/config/: fake_controllers.yaml  gazebo_omtp.urdf  ros_controllers.yaml  stomp_planning.yaml
lecture5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
lecture5_v1/: .setup_assistant  CMakeLists.txt  package.xml
lecture5_v1/config/: ompl_planning.yaml  omtp.srdf  simple_moveit_controllers.yaml
lecture5_v1/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
omtp_factory_behaviors/: README.md
omtp_factory_behaviors/omtp_factory_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
omtp_factory_behaviors/omtp_factory_flexbe_states/: CMakeLists.txt  package.xml  setup.py
omtp_lecture1/urdf/: omtp_factory.urdf  omtp_factory.xacro
omtp_lecture2/: CMakeLists.txt  Readme.md  moveit_commander_test.txt  omtp_lecture2_part1.mkv  omtp_lecture2_part2.mkv  package.xml
omtp_lecture2/launch/: omtp_moveit_gazebo.launch
omtp_lecture2/scripts/: lecture2_pick_and_place.py
omtp_lecture2/worlds/: box_world.world
omtp_lecture3/: CMakeLists.txt  Readme.md  package.xml
omtp_lecture3/include/omtp_lecture3/plugins/: ROSLogicalCameraPlugin.hh
omtp_lecture3/launch/: omtp_lecture3.launch
omtp_lecture3/models/logical_camera/: model.sdf
omtp_lecture3/models/logical_camera1/: model.sdf
omtp_lecture3/models/logical_camera2/: model.sdf
omtp_lecture3/scripts/: transform_object_pose.py
omtp_lecture3/src/plugins/: ROSLogicalCameraPlugin.cc
omtp_lecture3/urdf/: omtp_panda.urdf.xacro
omtp_lecture3/worlds/: box_world.world
omtp_lecture4/: CMakeLists.txt  README.md  omtp_lecure4.mkv  package.xml
omtp_lecture4/launch/: omtp_flexbe_demo.launch
omtp_lecture4/rviz/: moveit.rviz
omtp_lecture4/urdf/: omtp_flexbe.urdf.xacro
omtp_lecture4/worlds/: box_world.world
omtp_lecture5/: CMakeLists.txt  Readme.md
omtp_lecture5/covid19_colab/: README.md  covid19_mask.ipynb  detect_mask_image.py  detect_mask_video.py  realtimevideo01.webm  train_mask_detector.py
omtp_lecture5/launch/: lecture5.launch  omtp_panda_2d_cam.launch
omtp_lecture5/urdf/: omtp_panda5.urdf.xacro
omtp_lecture5/worlds/: new.world  yolo_world.world
omtp_lecture7/: Exercise1_dmp.py  Exercise3_demo_DMP_franka.py  Jspace_Cspace_DMP_Exercise2.py  Lec_7_Ex_3  Readme.md  demo.py
omtp_lecture7/dmp/: canonical_system.py  dmp_cartesian.py  dmp_position.py
omtp_lecture7/util/: filter_util.py
omtp_lecture9/: README.md  Readme.md  omtp_lectrue9.py  short_version.py
omtp_lecture_1/omtp course files lecture 1 (2023)/omtp_support/: CMakeLists.txt  package.xml
omtp_lecture_1/omtp course files lecture 1 (2023)/omtp_support/rviz/: omtp.rviz
omtp_lecture_1/omtp course files lecture 1 (2023)/omtp_support/urdf/: omtp.gv  omtp.urdf  omtp_factory.xacro
omtp_lecutre10/: README.md
omtp_support/: Readme.md
omtp_support/launch/: visualize_omtp_factory.launch
panda_moveit_config/: .setup_assistant  package.xml
panda_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  omtp.srdf  ros_controllers.yaml
panda_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
panda_moveit_config/panda_moveit_config/: .setup_assistant  package.xml
panda_v1/: .setup_assistant  CMakeLists.txt  package.xml
panda_v1/config/: fake_controllers.yaml  joint_limits.yaml  (+3 more)
yolov3_pytorch_ros/: README.md  requirements.txt
(+63 files in other folders)
