<?xml version="1.0"?>
<package format="2">
  <name>omtp_lecture2</name>
  <version>0.0.0</version>
  <description>The omtp_lecture2 package</description>

  <maintainer email="sb@mp.aau.dk">Simon Bøgh</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>moveit_commander</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
