<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
  <package format="3">
  <name>omtp_lecture3</name>
  <version>0.1.0</version>
  <description>The omtp_lecture3 package</description>

  <maintainer email="yz6me@virginia.edu">Yizhe Zhang</maintainer>
  <author email="yz6me@virginia.edu">Yizhe Zhang</author>

  <license>BSD</license>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-paramiko</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-paramiko</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_msgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tinyxml</depend>
  <depend>tf</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" />
    <gazebo_ros gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>

</package>
